crates/language-v2/tests/src/fail/p3_references/enabled_too_early/test.stderr
error: Parent scope is only enabled in '3.0.0..4.0.0'.
  --> src/fail/p3_references/enabled_too_early/test.rs:27:83
   |
27 |                         fields = (field_1 = Optional(reference = Three, enabled = From("2.0.0")))
   |                                                                                   ^^^^
